; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_String.c_String_Hash.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_String.c_String_Hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.String = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.String*)* @String_Hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @String_Hash(%struct.String* %0) #0 {
  %2 = alloca %struct.String*, align 8
  %3 = alloca %struct.String*, align 8
  store %struct.String* %0, %struct.String** %2, align 8
  %4 = load %struct.String*, %struct.String** %2, align 8
  store %struct.String* %4, %struct.String** %3, align 8
  %5 = load %struct.String*, %struct.String** %3, align 8
  %6 = getelementptr inbounds %struct.String, %struct.String* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.String*, %struct.String** %3, align 8
  %9 = getelementptr inbounds %struct.String, %struct.String* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @strlen(i32 %10)
  %12 = call i32 @hash_data(i32 %7, i32 %11)
  ret i32 %12
}

declare dso_local i32 @hash_data(i32, i32) #1

declare dso_local i32 @strlen(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
